Add some beauties

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,1 +1,9 @@
-<p><%= answer.content %></p>
+<div class="row clearfix">
+  <div class="complete">
+      <i style="opacity: 0.5;" class="fa fa-check">12ffffgggggggfffff3</i>
+  </div>
+
+  <div class="answer">
+    <p><%= answer.content %></p>
+  </div>
+</div>
