--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,5 +1,5 @@
 <div class="row clearfix">
-  <div class="complete">
+  <div class="admin_name">
       <i style="opacity: 0.5;" class="fa fa-check">12ffffgggggggfffff3</i>
   </div>
 
