--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -122,7 +122,7 @@ body {
     width: 100%;
     border-top: 1px solid rgba(250, 250, 250, .3);
     border-bottom: 1px solid rgba(250, 250, 250, .3);
-    .complete {
+    .admin_name {
       width: 20%;
       float: left;
       text-align: center;
@@ -132,6 +132,7 @@ body {
     .answer {
       width: 80%;
       float: left;
+      word-wrap: break-word;
       p {
         margin: 0;
         padding: 1em;
