--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,6 +1,6 @@
 <div class="row clearfix">
   <div class="admin_name">
-      <i style="opacity: 0.5;" class="fa fa-check">12ffffgggggggfffff3</i>
+      <i style="opacity: 0.5;" class="fa fa-check"><%= answer.admin_email %></i>
   </div>
 
   <div class="answer">
