WIP: fix ugliest styles

--- a/app/views/user_boards/_form.html.erb
+++ b/app/views/user_boards/_form.html.erb
@@ -10,7 +10,8 @@
       </ul>
     </div>
   <% end %>
-
+  <p class="user_board_name">New User Board</p>
+  <br/>
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
