--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,10 +57,20 @@ body {
   padding: 1em 0;
 }
 
-.login_bar {
+.nested_container {
+  width: 85%;
+  background: $white_opaque;
+  margin: 3em auto 3em auto;
+  border-radius: 7px;
+  -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, .3);
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, .03);
+  padding: 1em 0;
+}
+
+.links_bar {
   width: 10%;
   background: $white_opaque;
-  margin: 3em auto 0 auto;
+  margin: .3em 5% 0 auto;
   border-radius: 7px;
   -webkit-box-shadow: 0 0 4px 3px rgba(0, 0, 0, .3);
   box-shadow: 0 0 4px 4px rgba(0, 0, 0, .03);
@@ -168,17 +178,6 @@ body {
       border-radius: 4px;
       padding: 1em 2em;
     }
-    input[type="password"] {
-      width: 72%;
-      margin-right: 2%;
-      display: inline-block;
-      outline: none;
-      background: rgba(250, 250, 250, .4);
-      border: none;
-      height: 40px;
-      border-radius: 4px;
-      padding: 1em 2em;
-    }
     input[type="submit"] {
       background: rgba(250, 250, 250, .4);
       outline: none;
@@ -212,7 +211,7 @@ body {
 
 .links {
   display: block;
-  margin: 1.5em 1em 0 1em;
+  margin: .5em .5em .5em 2em;
   text-align: left;
   font-size: 0.8em;
   color: white;
