--- a/app/views/user_boards/new.html.erb
+++ b/app/views/user_boards/new.html.erb
@@ -1,10 +1,9 @@
-<h1>New User Board</h1>
-<div class="login_bar">
-  <%= link_to 'Sign Up', new_admin_registration_path, class: 'links' %>
-  <%= link_to 'Login', new_admin_session_path, class: 'links' %>
-</div>
 <div class="container">
-  <%= render 'form', user_board: @user_board %>
+  <div class="links_bar">
+    <%= link_to 'Sign Up', new_admin_registration_path, class: 'links' %>
+    <%= link_to 'Login', new_admin_session_path, class: 'links' %>
+  </div>
+  <div class="container">
+    <%= render 'form', user_board: @user_board %>
+  </div>
 </div>
-
-<%= link_to 'Back', user_boards_path %>
