--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,10 +1,9 @@
 <div class="row clearfix">
   <div class="admin_name">
-      <i style="opacity: 0.5;" class="fa fa-check"><%= answer.admin_email %></i>
+    <i style="opacity: 0.8;" class="fa fa-check"><%= answer.admin_email %></i>
+    <i><p><%= answer.created_at %></p></i>
   </div>
-
   <div class="answer">
-    <p><%= answer.created_at %></p>
     <p><%= answer.content %></p>
   </div>
 </div>
