--- a/app/views/user_boards/index.html.erb
+++ b/app/views/user_boards/index.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="links_bar">
+  <div class="nested_container">
     <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "links" %>
   </div>
   <p id="notice"><%= notice %></p>
@@ -15,4 +14,3 @@
       </div>
     </div>
   <% end %>
-</div>
