--- a/app/views/user_boards/show.html.erb
+++ b/app/views/user_boards/show.html.erb
@@ -1,24 +1,28 @@
-<div class="container">
-  <p id="notice"><%= notice %></p>
-  <div class="links_bar">
-    <%= link_to 'Complete', @user_board, method: :patch, data: {confirm: 'Are you sure?'}, class: 'links' %>
-    <%= link_to 'Back', root_path, class: 'links' %>
+<div class="nested_container">
+  <%= link_to 'Back', root_path, class: 'links' %>
+</div>
+<p id="notice"><%= notice %></p>
+<div class="nested_container">
+  <div class="index_row clearfix">
+    <p class="user_board_email"><%= @user_board.created_at %></p>
+    <br/>
+    <p class="user_board_name"><%= @user_board.name %></p>
+    <p class="user_board_email"><%= @user_board.email %></p>
+    <p class="user_board_question"><%= @user_board.question %></p>
   </div>
-  <div class="nested_container">
-    <div class="index_row clearfix">
-      <p class="user_board_email"><%= @user_board.created_at %></p>
-      <br/>
-      <p class="user_board_name"><%= @user_board.name %></p>
-      <p class="user_board_email"><%= @user_board.email %></p>
-      <p class="user_board_question"><%= @user_board.question %></p>
-    </div>
-  </div>
-  <div id="answers_wrapper">
-    <%= render @user_board.answers %>
-    <% if admin_signed_in? %>
-      <div id="form">
-        <%= render "answers/form" %>
+  <% if admin_signed_in? %>
+    <%= button_to "Complete", @user_board, method: :patch, data: {confirm: 'Are you sure?'}, class: 'complete_button' %>
+  <% end %>
+</div>
+<div id="answers_wrapper">
+  <% if admin_signed_in? %>
+    <% unless @user_board.answers.empty? %>
+      <div class="nested_container">
+        <%= render @user_board.answers %>
       </div>
     <% end %>
-  </div>
+    <div id="form">
+      <%= render "answers/form" %>
+    </div>
+  <% end %>
 </div>
