--- a/app/views/user_boards/new.html.erb
+++ b/app/views/user_boards/new.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <div class="links_bar">
+<% unless admin_signed_in? %>
+  <div class="nested_container">
     <%= link_to 'Sign Up', new_admin_registration_path, class: 'links' %>
     <%= link_to 'Login', new_admin_session_path, class: 'links' %>
   </div>
-  <div class="container">
-    <%= render 'form', user_board: @user_board %>
-  </div>
+<% end %>
+<div class="nested_container">
+  <%= render 'form', user_board: @user_board %>
 </div>
