--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -122,14 +122,15 @@ body {
     .admin_name {
       width: 20%;
       float: left;
-      text-align: center;
       border-right: 1px solid rgba(250, 250, 250, .3);
+      text-align: center;
       padding: 1em 0;
     }
     .answer {
       width: 80%;
       float: left;
       word-wrap: break-word;
+      border-left: 1px solid rgba(250, 250, 250, .3);
       p {
         margin: 0;
         padding: 1em;
@@ -303,7 +304,7 @@ input.complete_button {
   outline: none;
   border: none;
   height: 40px;
-  color: #CCCCCC;
+  color: #F7F7F7;
   border-radius: 4px;
   width: 25%;
   display: inline-block;
@@ -317,4 +318,26 @@ input.complete_button {
 
 ::-webkit-input-placeholder {
   color: $dark;
+}
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+
+  src: url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.eot');
+  src: url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.woff') format('woff'), url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
+.glyphicon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  font-family: 'Glyphicons Halflings';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.glyphicon-send:before {
+  content: "\e171";
 }
