--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for([@user_board, @user_board.answers.build]) do |f| %>
-  <%= f.text_area :content, placeholder: "New answer" %>
+  <%= f.text_area :content, placeholder: 'New answer' %>
   <%= f.submit %>
 <% end %>
