--- a/app/views/user_boards/_form.html.erb
+++ b/app/views/user_boards/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   <div class="new_board_field">
     <%= form.label :name, class: 'new_board_label' %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, placeholder: "Anonymous" %>
   </div>
 
   <div class="new_board_field">
