add answer mailer

--- a/app/views/answer_mailer/answer_email.html.erb
+++ b/app/views/answer_mailer/answer_email.html.erb
@@ -4,8 +4,8 @@
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
 </head>
 <body>
-<h1><%= "User board #{@user_board.id} was created." %></h1>
-<p>Question: <%= @user_board.question %> <br>
+<h1><%= "New answer on your board #{@user_board.id} was created." %></h1>
+<p>Answer: <%= @answer %> <br>
 <p>You can view board on: <a href="<%= @user_board_path %>">this page</a> <br>
 </p>
 </body>
