--- a/app/views/board_mailer/board_email.text.erb
+++ b/app/views/board_mailer/board_email.text.erb
@@ -1,2 +1,2 @@
 <%= "User board #{@user_board.id} was created." %>
-You can view board at: <%= @user_board_path %>
+You can view board on: <%= @user_board_path %>
